--- a/hm.bib
+++ b/hm.bib
@@ -163,7 +163,7 @@ Bibliography}
 
 @incollection{Broer_2009,
   doi       = {10.1007/978-0-387-30440-3_372},
-  url       = {http://www.math.rug.nl/~broer/pdf/nfpt.pdf},
+  url       = {http://www.math.rug.nl/\~{}broer/pdf/nfpt.pdf},
   year      = 2009,
   publisher = {Springer New York},
   pages     = {6310--6329},
@@ -265,7 +265,7 @@ Bibliography}
 }
 
 @article{Poschel1993,
-  author  = {P{\"{o}}schel, J{\"{u}}rgen},
+  author  = {P\"oschel, J\"urgen},
   doi     = {10.1007/BF03025718},
   file    = {:Users/mseri/Documents/Mendeley/P{\"{o}}schel/Mathematische Zeitschrift/P{\"{o}}schel - 1993 - Nekhoroshev estimates for quasi-convex hamiltonian systems.pdf:pdf},
   issn    = {0025-5874},
@@ -280,7 +280,7 @@ Bibliography}
 }
 
 @incollection{poschel2001,
-  author    = {J\"urgen {P\"oschel}},
+  author    = {P\"oschel, J\"urgen},
   title     = {{A lecture on the classical KAM theorem.}},
   booktitle = {{Smooth ergodic theory and its applications. Proceedings of the AMS summer research institute, Seattle, WA, USA, July 26--August 13, 1999}},
   isbn      = {0-8218-2682-4/hbk},
